# zeph

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
app/: main.py
app/extract/: __init__.py  playlists.py  songs.py
app/routers/: __init__.py  playlist.py
static/extract/: index.html  script.js  styles.css
static/fonts/: fonts.css
tests/: conftest.py  test.json
tests/app/extract/: test_songs.py
