[tool.poetry]
name = "zeph"
version = "0.0.1"
description = ""
authors = ["Arnold Unterauer <46269201+Anemosx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
uvicorn = "^0.30.6"
fastapi = "^0.112.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
black = "^24.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
